@@ -1,0 +1,24 @@
+imports:
+    - behat.common.yml
+
+default:
+  extensions:
+    Drupal\MinkExtension:
+      # Set 'base_url' to the URL to view your Drupal site.
+      # For example: http://mydrupalsite.com
+      base_url: 'http://appserver'
+      files_path: './profiles/panopoly/modules/panopoly/panopoly_test/behat'
+      selenium2:
+        wd_host: http://chromedriver:4444/wd/hub
+        #wd_host: http://172.17.0.1:4444/wd/hub
+    Drupal\DrupalExtension:
+      drush:
+        # Set 'root' to the full path to your Drupal code base.
+        # For example: '/var/www/drupal'
+        root: '/app'
+      drupal:
+        # Same as 'root' above!
+        drupal_root: '/app'
+      subcontexts:
+        paths:
+          - "./profiles/panopoly"
